--- a/humanCatInteract/src/styles.css
+++ b/humanCatInteract/src/styles.css
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+height: 100%;
+}
+
+.main-container {
+    background-color: rgba(242, 248, 192, 0.496);
+    height: 100%;
+    gap: 20px;
+}
+
+.flex {
+    display: flex;
+}
+
+.column {
+    flex-direction: column;
+}
+
+.smol-gap {
+    gap: 20px;
+}
+
+.center {
+    align-items: center;
+}
+
+.dev-padding {
+    padding: 100px 100px;
+}
