--- a/humanCatInteract/src/app/app.component.html
+++ b/humanCatInteract/src/app/app.component.html
@@ -1,26 +1,22 @@
-<div class="main-container">
-  <div class="flex column smol-gap center dev-padding">
-    <div class="flex center smol-gap">
+<div class="bg-green-300 h-screen w-screen">
+  <div class="flex flex-col">
+    <div class="flex gap-2">
       <select (change)="selectChange($event)" name="answers" id="answers">
         <option value="-1">meow meow meow...</option>
         <option *ngFor="let ans of answers" [value]="ans.id" >{{ans.text}}</option>
       </select>
-      <input type="text" #keyword (keyup.enter)="getNewCat(keyword)" class="form-control-lg"
+      <input type="text" #keyword (keyup.enter)="getNewCat(keyword)" class=""
         placeholder="Enter some text..">
-      <button class="btn btn-primary" (click)="getNewCat(keyword)">Get a cat</button>
+      <button class="px-4 py-1 text-lg bg-yellow-100 text-co font-bold rounded-full border-4 border-gray-300 hover:text-white
+       hover:bg-purple-300 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2" 
+      (click)="getNewCat(keyword)">Get a cat!</button>
     </div>
-    <div class="row">
+    <div class="">
       <div *ngIf="RandomCatObject">
-        <a [href]="RandomCatUrl" target="_blank"><img [src]="RandomCatUrl"></a>
+        <a [href]="RandomCatUrl" target="_blank">
+          <img [src]="RandomCatUrl">
+        </a>
       </div>
     </div>
-    <!-- <div class="row" *ngIf="answers.length >= 1">
-      {{ _selectedItemId}}
-      <ul>
-        <li *ngFor="let answer of answers; index as i" (click)="selectAnswer(answer.id)" [ngClass]="{'selected': getItemStatus(answer.id)  }">
-          text: {{answer.text}}
-        </li>
-      </ul>
-    </div> -->
   </div>
 </div>
