--- a/humanCatInteract/src/styles.css
+++ b/humanCatInteract/src/styles.css
@@ -1,4 +1,8 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* html,
 body {
 height: 100%;
 }
@@ -31,4 +35,4 @@ height: 100%;
 
 .selected {
     background-color: rgb(212, 230, 230);
-}
+} */
